[tool.poetry]
name = "pandasaurus-cxg"
version = "0.1.7"
description = "Ontology enrichment tool for CxG standard AnnData files."
authors = ["Ugur Bayindir <ugur@ebi.ac.uk>"]
license = "http://www.apache.org/licenses/LICENSE-2.0"
readme = "README.md"
packages = [{include = "pandasaurus_cxg"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.2"
anndata = "^0.9.1"
rdflib = "^6.3.2"
oaklib = "0.5.13"
matplotlib = "^3.7.2"
pandasaurus = "^0.3.6"
pygraphviz = "^1.11"
sphinx = { version = "^7.2.6", optional = true }
sphinx-rtd-theme = { version = "^1.3.0", optional = true }
sphinx-copybutton = { version = "^0.5.2", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
flake8-black = "^0.3.6"
flake8-isort = "^6.0.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
docs = ["sphinx", "sphinx-rtd-theme", "sphinx-copybutton"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
